# fm-script-client-rs

./: .releaserc.json  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: pull-request.yml  release.yml
src/: data_api.rs  lib.rs  odata_api.rs  result.rs
