[package]
name = "fm-script-client"
version = "1.1.0"
edition = "2021"
authors = ["Ben Scholzen 'DASPRiD' <mail@dasprids.de>"]
description = "Async client to execute scripts on FileMaker servers through Data- and OData API"
license = "MIT"
repository = "https://github.com/soliantconsulting/fm-script-client-rs"

[dependencies]
async-trait = "0.1.83"
reqwest = { version = "0.12.9", default-features = false, features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = "1.41.1"
url = "2.5.4"

[dev-dependencies]
mockito = "1.6.1"
tokio = { version = "1.41.1", features = ["full"] }

[features]
default = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

