[package]
name = "fm-script-client"
version = "1.1.0"
edition = "2021"
authors = ["Ben Scholzen 'DASPRiD' <mail@dasprids.de>"]
description = "Async client to execute scripts on FileMaker servers through Data- and OData API"
license = "MIT"
repository = "https://github.com/soliantconsulting/fm-script-client-rs"

[dependencies]
async-trait = "0.1.88"
reqwest = { version = "0.12.15", default-features = false, features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = "1.44.1"
url = "2.5.4"
log = "0.4.26"

[dev-dependencies]
mockito = "1.7.0"
tokio = { version = "1.44.1", features = ["full"] }

[features]
default = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

